kubernete_project_ingress/Ingress/Ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-clone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-ingress
  namespace: amazon-clone
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /home(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-service   # 👈 frontend service
                port:
                  number: 80
          - path: /home/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-service
                port:
                  number: 80
          - path: /home/cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 80
          - path: /home/account(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /home/wishlist(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wishlist-service
                port:
                  number: 80
          - path: /home/payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service   # 👈 add your payment service here
                port:
                  number: 80
          - path: /home/product/([^/]+)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
